# embed_md

./: .gitignore  Cargo.toml  README.md  license.txt
.github/workflows/: ci.yml  release.yml
embed_md/: Cargo.toml
embed_md/src/: chunks.rs  helpers.rs  lib.rs  main.rs
embed_md_derive/: Cargo.toml
embed_md_derive/src/: lib.rs
embed_md_traits/: Cargo.toml
embed_md_traits/src/: lib.rs
samples/: another.md  sample.md
